--- a/paucal.toml
+++ b/paucal.toml
@@ -173,6 +173,9 @@
 "paucal:patSound" = "entity.villager.ambient"
 "paucal:patPitchCenter" = 1.5
 
+# 0x388349
+"hexcasting:colorizer" = [3703625]
+
 # SammySemicolon
 ["0ca54301-6170-4c44-b3e0-b8afa6b81ed2"]
 "paucal:contributorLevel" = 0
