--- a/paucal.toml
+++ b/paucal.toml
@@ -216,6 +216,14 @@
 # [0xe64539, 0xff8933, 0xf0b541, 0x92e8c0, 0x9c2a70, 0x4b1d52]
 "hexcasting:colorizer" = [15091001, 16746803, 15775041, 9627840, 10234480, 4922706]
 
+# LemmaEOF
+["3f5150ea-fade-4233-ad40-719e207154e9"]
+"paucal:contributorLevel" = 0
+"paucal:isDev" = false
+"paucal:isCool" = true
+
+"paucal:patSound" = "paucal:pet.device"
+
 # Todo:
 # SleepyEmber
 
