--- a/paucal.toml
+++ b/paucal.toml
@@ -177,6 +177,7 @@
 "hexcasting:colorizer" = [6548735, 16752895]
 
 "paucal:patSound" = "paucal:pet.ultrainstinct"
+"paucal:patPitchVariance" = 0.1
 
 # DaniCherryJam
 ["d475af59-d73c-42be-90ed-f1a78f10d452"]
