--- a/paucal.toml
+++ b/paucal.toml
@@ -197,6 +197,12 @@
 "paucal:isCool" = false
 "hexcasting:colorizer" = [0x314267]
 
+# Kinomoru
+["eec9c96b-d30b-4e1f-b38b-a9985c2c9118"]
+"paucal:contributorLevel" = 2
+"paucal:isDev" = false
+"paucal:isCool" = false
+"hexcasting:colorizer" = [0x6495D9, 0x99DAD2, 0x5850A2]
 
 # == Cool People ==
 
