--- a/paucal/contributors-v01.toml
+++ b/paucal/contributors-v01.toml
@@ -7,7 +7,7 @@
 
 # petra_the_kat
 ["a2ce9382-2518-4752-87b2-c6a5c97f173e"]
-"paucal:contributorLevel" = 7604
+"paucal:contributor_level" = 7604
 "paucal:is_dev" = true
 
 "paucal:pat_sound" = "bwop"
