--- a/paucal/contributors-v01.toml
+++ b/paucal/contributors-v01.toml
@@ -20,6 +20,6 @@
 "paucal:contributor_level" = 4 # for testing purposes
 "paucal:is_dev" = true
 
-"paucal:pat_sound" = "minecraft:note/bit"
+"paucal:pat_sound" = "bwop"
 "paucal:pat_variance" = 0.1
 
