forge be usable challenge

--- a/paucal/contributors-v01.json5
+++ b/paucal/contributors-v01.json5
@@ -6,7 +6,7 @@
 
 // petra_the_kat
 "a2ce9382-2518-4752-87b2-c6a5c97f173e": {
-  "paucal:contributor_level": 0o7604,
+  "paucal:contributor_level": 7604,
   "paucal:is_dev": true,
   "paucal:pat_sound": "bwop",
   "paucal:pat_variance": 0.1,
