--- a/paucal/contributors-v01.json5
+++ b/paucal/contributors-v01.json5
@@ -51,7 +51,7 @@
 "d30d8e38-6f93-4d96-968d-dd6ec5596941": {
   "paucal:contributor_level": 0,
   "paucal:is_dev": true,
-  "paucal:pat_sound": "minecraft:mob/wolf/panting"",
+  "paucal:pat_sound": "minecraft:mob/wolf/panting",
   "hexcasting:colorizer": [0xa11420, 0x291d2b],
 },
 
