--- a/paucal/contributors-v01.json5
+++ b/paucal/contributors-v01.json5
@@ -1,4 +1,3 @@
-{
 // This is loaded by my library mod PAUCAL on game startup and is used for
 // contributor rewards
 
@@ -207,7 +206,7 @@
 // Rolahr
 "e857d388-f08d-43f0-b58b-c5c56146ced6": {
   "paucal:contributor_level": 2,
-  "hexcasting:colorizer": [0x9D769B, 0x14D01C],
+  "hexcasting:colorizer": [0x9d769b, 0x14d01c],
 },
 
 // KodeyTheNeko
@@ -331,9 +330,9 @@
 "b1a9e0e5-6252-41a7-aeab-b5b7135c0a4b": {
   "paucal:contributor_level": 0,
   "hexcasting:colorizer": [
-    0x078D70, 0x26CEAA, 0x99E8C2, 0xFFFFFF,
-    0x7BADE3, 0x5049CB, 0x3E1A78, 0x800080, 
-    0xFFFFFF, 0xA3A3A3, 0x000000
+    0x078d70, 0x26ceaa, 0x99e8c2, 0xffffff,
+    0x7bade3, 0x5049cb, 0x3e1a78, 0x800080, 
+    0xffffff, 0xa3a3a3, 0x000000
   ],
 },
 
@@ -382,5 +381,3 @@
   "paucal:contributor_level": 0,
   "hexcasting:colorizer": [0x800300, 0x5f5f5f],
 },
-
-}
